# sail

./: .gitignore  README.md  pyproject.toml
pjpd/: sail.txt
src/: manowar.py  sail_forces.py
src/sail/: __init__.py  main.py  manowar.py  sail_forces.py  sail_params.py  sails.py  ship.py
src/sail/reference/: __init__.py  sail_forces.py
test/: __init__.py  test_rudder_values.py  test_sail.py  test_sail_cycling.py  test_sail_direct.py  test_sail_force_direction.py
test/reference/: __init__.py  test_sail.py  test_sail_cycling.py  test_sail_force_direction.py
