[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sail"
version = "0.1.0"
description = "Sail force simulation and ship dynamics for square-rigged vessels"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
]

[project.scripts]
sail-sim = "sail.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sail"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
